...
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/login_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_image"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="25dp"
...
                android:background="@drawable/inputs"
                android:hint="@string/EnterUserName"
                android:inputType="text"
                android:padding="4dp" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_userName"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="25dp"
...
                android:background="@drawable/inputs"
                android:hint="@string/enterPassword"
                android:inputType="textPassword"
                android:padding="4dp" />

            <CheckBox
                android:id="@+id/checkRemember"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rememberMe"
                android:layout_below="@id/login_password"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="270dp"
...
                android:textStyle="bold"


                />

            <TextView
                android:id="@+id/Im_Admin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/checkRemember"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="260dp"
...
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/Im_not_Admin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/checkRemember"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="290dp"
...
                android:textSize="17sp"
                android:textStyle="bold"
                android:visibility="invisible"
                />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Im_Admin"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="17dp"
...
