<resources>
    <string name="app_name">BSport</string>
    <string name="wel">ברוכים הבאים</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="chooseDay">בחר את היום, השעה, והמיקום כדי לבצע פעילות ספורט עם מי שרק תרצה!</string>
    <string name="AlreadyHaveAccountLink">כבר יש לך חשבון?\u200e</string>
    <string name="CreateAccount">יצירת חשבון</string>
    <string name="RegisterAboutMyself">קצת על עצמי…\u200e</string>
    <string name="age">גיל</string>
    <string name="name">שם</string>
    <string name="password">סיסמה</string>
    <string-array name="register_sport">
        <item>תחום ספורט</item>
        <item>כדור רגל</item>
        <item>כדור סל</item>
        <item>טניס</item>
        <item>גודו</item>
        <item>חדר כושר</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pass">\?שכחת סיסמה</string>
    <string name="EnterUserName">הכנס שם משתמש…\u200e</string>
    <string name="adminClickHere">מנהל - לחץ כאן\u200e</string>
    <string name="search">חיפוש…\u200e</string>
    <string name="Enter_your_activity">הזן את שם הפעילות שלך…\u200e</string>
    <string name="type_activity">הכנס את סוג הפעילות..\u200e</string>
    <string name="Quantity_of_players">הכנס כמות שחקנים לפעילות..\u200e</string>
    <string name="Create_activity">צור פעילות</string>
    <string name="date_activity">הכנס תאריך ושעה\u200e</string>
    <string name="Create_new_activity">יצירת פעילות חדשה</string>
    <string name="type">Type</string>
    <string name="activity_type1">סוג הפעילות</string>
    <string name="name_activity">שם הפעילות</string>
    <string name="game_date1">תאריך הפעילות</string>
    <string name="location_activity">מיקום הפעילות</string>
    <string name="activity_location">הכנס את רחוב הפעילות</string>
    <string name="remove_activity">מחיקת פעילות</string>
    <string name="enterPassword">...הכנס סיסמה</string>
    <string name="rememberMe">זכור אותי</string>
    <string name="iAmNotAdmin">אני לא מנהל</string>
    <string name="connect">התחבר</string>
    <string name="register">הרשמה</string>
    <string name="nameActivity">שם הפעילות</string>
    <string name="blablbal">blablbal</string>
    <string name="date">תאריך</string>
    <string name="location">מיקום</string>
    <string name="numPlayer">מספר שחקנים</string>
    <string name="Create">נוצר על ידי:</string>
    <string name="moreLeft">נותרו עוד x מקומות</string>
    <string name="joinActivity">הצטרף לפעילות זו</string>
    <string name="addCommit">הוסף את תגובתך</string>
    <string name="addCom">הוסף תגובה</string>
    <string name="todo">TODO</string>
    <string name="allRightsReserved">כל הזכויות שמורות</string>
    <string name="tai">קבוצת תאי</string>
    <string name="textview">TextView</string>
    <string name="username1">שם משתמש</string>
    <string name="email1">אימייל</string>
    <string name="enterPass">הכנס סיסמא חדשה</string>
    <string name="enterPassAgain">הכנס שוב סיסמא חדשה</string>
    <string name="changePass">שנה סיסמא</string>
    <string name="AboutMyself">ספר על עצמך</string>
    <string name="enterAge">הכנס גיל</string>
    <string name="changePrivateArea">שנה פרטים אישיים</string>
    <string name="eneteEmailNew">הכנס אימייל חדש</string>
    <string name="username2">username</string>
    <string name="comment2">Comment</string>
    <string name="affiliateActivities">חפש שותפים לפעילות ספורט ברחבי העיר באר שבע</string>
    <string name="someonePlayWith">עכשיו זה קל מתמיד למצוא מישהו לשחק איתו:</string>
    <string name="postNewActivity">1. פרסם פעילות חדשה</string>
    <string name="toJoinYou">2. חכה לחברים שיצטרפו אליך</string>
    <string name="startPracticing">3. תפגש עם החברים ותתחילו להתאמן! \n\n\n</string>
    <string name="welecam12">ברוך הבא לאזור האישי</string>
    <string name="changePass1">שינוי סיסמא</string>
    <string name="changePrivArea">שינוי פרטים אישיים</string>
    <string name="locationActiv">מיקום הפעילות</string>
    <string name="playersAdded">שחקנים שנוספו</string>
    <string name="productionDate">תאריך יצירה</string>
    <string name="street">street</string>
    <string name="neighborhood">neighborhood</string>
    <string name="name1">Name</string>
    <string name="disabledAccess">נגישות לנכים</string>
</resources>
