<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#E6E6E6"

        tools:ignore="MissingDefaultResource">
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view1"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            card_view:cardCornerRadius="10dp"
            card_view:cardBackgroundColor="#BABABA"
            >
        <!--
        items for a single row of RecyclerView
        -->
            <TextView
                android:id="@+id/nameJoin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/username2"
                android:singleLine="true"
                android:textColor="#C1000000"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="12sp" />

        </androidx.cardview.widget.CardView>


</LinearLayout>


