...

    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/linearlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:id="@+id/nameTitle"
...
        android:layout_marginTop="1dp"

        android:gravity="center"
        />

    <Button
        android:id="@+id/submit_activity2"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@+id/spotsLeft"
        android:layout_marginTop="1dp"
        android:background="@drawable/buttons"
        android:gravity="center"
...
