...
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".MyActivitiesFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewNewActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:background="@color/colorAccent"
        android:scrollbars="vertical"/>

...
